--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <div style="width:100%;text-align:ceter;">
+  <div style="width:100%;text-align:center;">
     <h1><a href="index.html">Main Page</a></h1>
   	<img src="food1.jpg" width="30%">
     <h2>Coming Soon!</h2>
