--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div style="width:100%;text-align:center;">
-    <h1 style="background-color: #FFBF00;padding: 10px;"><a href="index.html" style="text-decoration:none;color:white;>Main Page</a></h1>
+    <h1 style="background-color: #FFBF00;padding: 10px;"><a href="index.html" style="text-decoration:none;color:white;">Main Page</a></h1>
   	<img src="food1.jpg" width="50%">
     <h2>Coming Soon!</h2>
   </div>
