--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <title>WEB1 - html</title>
   <meta charset="utf-8">
 </head>
+<style>
+.title img{
+  position: absolute; top:0; left: 0;
+  width: 100%;
+  height: 100%;
+}
+</style>
 <body>
   <div style="width:100%;text-align:center;">
-    <h1 style="background-color: #FFBF00;padding: 10px;"><a href="index.html" style="text-decoration:none;color:white;">Main Page</a></h1>
+    <h1 class="title" style="background-color: #FFBF00;padding: 10px;"><a href="index.html" style="text-decoration:none;color:white;">Main Page</a></h1>
   	<img src="food1.jpg" width="40%">
     <img src="food2.jpg" width="40%">
     <h2>Coming Soon!</h2>
