--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h1 class="title" style="background-color: #FFBF00;padding: 10px;"><a href="index.html" style="text-decoration:none;color:white;">Main Page</a></h1>
   	<img src="food1.jpg" width="40%">
     <img src="food2.jpg" width="40%">
+    <div style="width:40%;background:url(food1.jpg)">&nbsp;</div>
+    <div style="width:40%;background:url(food2.jpg)">&nbsp;</div>
     <h2>Coming Soon!</h2>
   </div>
   
