--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>WEB1 - html</title>
   <meta charset="utf-8">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <style>
 .title img{
@@ -13,13 +15,38 @@
 </style>
 <body>
   <div style="width:100%;text-align:center;">
-    <h1 class="title" style="background-color: #FFBF00;padding: 10px;"><a href="index.html" style="text-decoration:none;color:white;">Main Page</a></h1>
-  	<img src="food1.jpg" width="40%">
+    <h1 class="title" style="background-color: #FFBF00;padding: 10px;"><a href="index.html" style="text-decoration:none;color:white;">ThekidsCatering</a></h1>
+    <div class="row">
+      <div class="col-sm-12 title" style="min-height:500px;background: url(food1.jpg) no-repeat 50% 50%;background-size: cover;">
+
+      </div>
+
+    </div>
+    <h2 style="padding:50px 0;">Coming Soon!</h2>
+    <div class="row" style="max-width:900px;margin:auto;">
+      <div class="col-sm-6" style="min-height:500px;background: url(food2.jpg) no-repeat 50% 50%;background-size: cover;">
+
+      </div>
+      <div class="col-sm-6" style="font-size:30px;font-weight:500;margin:auto;">
+        <div>Menu</div>
+        <div>Coming Soon!</div>
+      </div>
+    </div>
+    <div class="row" style="max-width:900px;margin:auto;">
+      <div class="col-sm-6" style="font-size:30px;font-weight:500;margin:auto;">
+        <div style="">Coming Soon!</div>
+      </div>
+      <div class="col-sm-6" style="min-height:500px;background: url(food3.jpg) no-repeat 50% 50%;background-size: cover;">
+
+      </div>
+    </div>
+<!--
+    <img src="food1.jpg" width="40%">
     <img src="food2.jpg" width="40%">
     <div style="width:40%;background:url(food1.jpg)">&nbsp;</div>
-    <div style="width:40%;background:url(food2.jpg)">&nbsp;</div>
-    <h2>Coming Soon!</h2>
+    <div style="width:40%;background:url(food2.jpg)">&nbsp;</div> -->
+
   </div>
-  
+
 </body>
 </html>
