--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <title>WEB1 - html</title>
   <meta charset="utf-8">
 
+  <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <style>
+body {
+  font-family: 'Sriracha', cursive;
+}
 .title img{
   position: absolute; top:0; left: 0;
   width: 100%;
@@ -22,22 +26,38 @@
       </div>
 
     </div>
-    <h2 style="padding:50px 0;">Coming Soon!</h2>
-    <div class="row" style="max-width:900px;margin:auto;">
+    <h2 style="padding:50px 0;color:#454545;">Coming Soon!</h2>
+    <div class="row" style="max-width:900px;margin:auto;background-color: #F3E2A9;">
       <div class="col-sm-6" style="min-height:500px;background: url(food2.jpg) no-repeat 50% 50%;background-size: cover;">
 
       </div>
       <div class="col-sm-6" style="font-size:30px;font-weight:500;margin:auto;">
-        <div>Menu</div>
-        <div>Coming Soon!</div>
+        <h2 style="padding-bottom:70px;">OUR SERVICE</h2>
+        <h4 style="padding-bottom:70px;color:#454545;">Coming Soon!</h4>
       </div>
     </div>
-    <div class="row" style="max-width:900px;margin:auto;">
+    <div class="row" style="max-width:900px;margin:auto;background-color: #F3E2A9;">
       <div class="col-sm-6" style="font-size:30px;font-weight:500;margin:auto;">
-        <div style="">Coming Soon!</div>
+        <h2 style="padding-bottom:70px;">MENU</h2>
+        <h4 style="padding-bottom:70px;color:#454545;">Coming Soon!</h4>
       </div>
       <div class="col-sm-6" style="min-height:500px;background: url(food3.jpg) no-repeat 50% 50%;background-size: cover;">
 
+      </div>
+    </div>
+    <br><br><br><br>
+    <div class="row" style="max-width:1200px;margin:auto;">
+      <div class="col-sm-3" style="max-height:500px;">
+        <img src="food2.jpg" width="100%">
+      </div>
+      <div class="col-sm-3" style="max-height:500px;">
+        <img src="food2.jpg" width="100%">
+      </div>
+      <div class="col-sm-3" style="max-height:500px;">
+        <img src="food2.jpg" width="100%">
+      </div>
+      <div class="col-sm-3" style="max-height:500px;">
+        <img src="food2.jpg" width="100%">
       </div>
     </div>
 <!--
@@ -48,5 +68,12 @@
 
   </div>
 
+  <footer style="height: 150px;margin-top:50px;text-align: center;background-color: #FFBF00;padding: 10px;">
+    <div class="row" style="max-width:1200px;margin:auto;">
+      <div class="col-sm-12">
+        Coming Soon!
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
