--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@ body {
     <br><br><br><br>
     <div class="row" style="max-width:1200px;margin:auto;">
       <div class="col-sm-4" style="max-height:500px;">
-        <img src="food4.jpg" width="100%">
+        <img src="food4.jpg" width="100%" height="250px">
       </div>
       <div class="col-sm-4" style="max-height:500px;">
-        <img src="food5.jpg" width="100%">
+        <img src="food5.jpg" width="100%" height="250px">
       </div>
       <div class="col-sm-4" style="max-height:500px;">
-        <img src="food6.jpg" width="100%">
+        <img src="food6.jpg" width="100%" height="250px">
       </div>
     </div>
 
